# codino

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.rst  changelog.html  codino.data.html  codino.html  codino.process.html  conduct.html  contributing.html  coverage.rc  example.html  example.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py
.github/workflows/: test_deploy.yml
_modules/: index.html
_modules/codino/data/: AminoAcidTable.html  CodonDesign.html  CodonTable.html  FreqTable.html
_modules/codino/process/: Converter.html
_sources/: codino.data.rst.txt  codino.rst.txt  example.ipynb.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/codino/: index.rst.txt
_sources/autoapi/codino/data/: index.rst.txt
_sources/autoapi/codino/process/: index.rst.txt
autoapi/: index.html
autoapi/codino/: index.html
autoapi/codino/data/: index.html
autoapi/codino/data/AminoAcidTable/: index.html
autoapi/codino/data/CodonDesign/: index.html
autoapi/codino/data/CodonTable/: index.html
autoapi/codino/data/FreqTable/: index.html
autoapi/codino/process/: index.html
codino/: AminoAcidTable.py  CodonDesign.py  CodonTable.py  Converter.py  FreqTable.py  __init__.py
codino/data/: AminoAcidTable.py  CodonDesign.py  CodonTable.py  FreqTable.py
codino/process/: Converter.py
codon_aa_freq/: CodonDesign.py  CodonTable.py
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/source/: codino.process.rst  conf.py  modules.rst
test/: test_AminoAcidTable.py  test_CodonDesign.py  test_Converter.py  test_FreqTable.py
tests/: test_CodonDesign.py  test_CodonTable.py  test_Converter.py
(+6 files in other folders)
