[tool.poetry]
name = "codino"
version = "0.1.0"
description = "Calculating amino acid frequencies from codon design, and vice versa"
authors = ["David Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
