[metadata]
name = codon_aa_freq
version = 0.0.1
author = David Zhang
author_email = dyzhang32@gmail.com
description = Calculating AA frequencies from codon frequencies and vice-versa
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dzhang32/codon_aa_freq
project_urls =
    Bug Tracker = https://github.com/dzhang32/codon_aa_freq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = codon_aa_freq